# Ferox

./: CMakeLists.txt  README.md
resources/shaders/: chunk.frag  chunk.vert  player.frag  player.vert
src/: Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  GameState.h  Inventory.cpp  Inventory.h  Noise.h  Player.cpp  Player.h  PlayerModel.cpp  PlayerModel.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAtlas.cpp  TextureAtlas.h  ThreadPool.h  UI.cpp  UI.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
